inserindo links externos

--- a/Html/index.html
+++ b/Html/index.html
@@ -1,1 +1,176 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Junior SS</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../Css/styles.css'>
+    <script src='../JavaScript/main.js'></script>
+</head>
+
+<body>
+    <nav class="nav-bar">
+        <ul class="menu">
+            <li>
+                <a href="#inicio">E aí tudo bem?</a>
+            </li>
+            <li>
+                <a href="skills">Skills</a>
+            </li>
+            <li>
+                <a href="techs">Tecnologias</a>
+            </li>
+            <li>
+                <a href="languages">Idiomas</a>
+            </li>
+            <li>
+                <a href="projects">Projetos</a>
+            </li>
+            <li>
+                <a href="exp">Experiencias</a>
+            </li>
+            <li>
+                <a href="#diplomas">Diplomas</a>
+            </li>
+            <li>
+                <a href="#contato">Contato</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <section id="inicio">
+            <h2>Inicio</h2>
+            <article>
+                <p> E aí, tudo bem?
+                    <br> Meu nome é Alexandre Júnior e sou desenvolvedor e estudante de engenharia de software
+                    <br> com foco em soluções web e mobile.
+                    Tenho interesse em gerencia de projetos, cyber segurança e IA.
+                </p>
+                <p>
+                    Chamei sua atenção? Olha minhas competências com mais calma aqui!
+                    <!-- download cv -->
+                </p>
+                <p>
+                    <a href="#contato">Quer conversar mais sobre?</a>
+                </p>
+            </article>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <article></article>
+        </section>
+        <section id="techs">
+            <h2>Tecnologias</h2>
+            <article></article>
+        </section>
+        <section id="languages">
+            <h2>Idiomas</h2>
+            <p>Classificando os níveis do idioma em 6 partes sendo elas respectivamente:<br>
+                <li>Iniciante</li>
+                <li>Básico</li>
+                <li>Intermediário</li>
+                <li>Avançado</li>
+                <li>Proeficiente</li>
+                <li>Nativo</li>
+            </p>
+            <article>
+                <h3>
+                    <p>Alemão
+                    <li>Escrita</li>
+                    <li>Escuta</li>
+                    <li>Fala</li>
+                    <li>Leitura</li></p>
+                </h3>
+                <h3>
+                    <p>Espanhol
+                    <li>Escrita</li>
+                    <li>Escuta</li>
+                    <li>Fala</li>
+                    <li>Leitura</li></p>
+                </h3>
+                <h3>
+                    <p>Francês
+                    <li>Escrita</li>
+                    <li>Escuta</li>
+                    <li>Fala</li>
+                    <li>Leitura</li></p>
+                </h3>
+                <h3>
+                    <p>Inglês
+                    <li>Escrita</li>
+                    <li>Escuta</li>
+                    <li>Fala</li>
+                    <li>Leitura</li></p>
+                </h3>
+                <h3>
+                    <p>Português
+                    <li>Escrita</li>
+                    <li>Escuta</li>
+                    <li>Fala</li>
+                    <li>Leitura</li></p>
+                </h3>
+            </article>
+        </section>
+        <section id="projects">
+            <h2>Projetos</h2>
+            <article></article>
+        </section>
+        <section id="exp">
+            <h2>Experiencias Profissionais</h2>
+            <article></article>
+        </section>
+        <section id="diplomas">
+            <h2>Diplomas e Titulos</h2>
+            <ul>
+                <li>
+                    <dl></dl>
+                </li>
+                <li>
+                    <dl></dl>
+                </li>
+                <li>
+                    <dl></dl>
+                </li>
+                <li>
+                    <dl></dl>
+                </li>
+                <li>
+                    <dl></dl>
+                </li>
+                <li>
+                    <dl></dl>
+                </li>
+                <li>
+                    <dl></dl>
+                </li>
+            </ul>
+            <article></article>
+        </section>
+        <section id="contato">
+            <h2>Contato</h2>
+            <article>
+                  <p>
+            Email: <a href="mailto:devjuniorss@gmail.com">devjuniorss@gmail.com</a> |
+            <a href="https://wa.me/5585984742878?text=acabei%20de%20ver%20seu%20perfil%20no%20seu%20site,%20gostaria%20de%20falar%20com%20voce%20se%20tiver%20um%20momento." target="_blank">WhatsApp</a>|
+           <a href="https://www.instagram.com/devjuniorss" target="_blank">Instagram</a>
+        </p>
+            </article>
+        </section>
+        <aside>
+            <h2>Quer falar de uma parceria?</h2>
+            <p>Envia uma mensagem e vamos ver essa ideia se tornar realidade.</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Desenvolvido por <span class="assinatura">Alexandre Júnior</span></p>
+        <p>
+            Linkedin: <a href="https://www.linkedin.com/in/devjuniorss" target="_blank">LinkedIn</a> |
+            GitHub: <a href="https://github.com/DevJuniorss" target="_blank">DevJuniorss</a> |
+            Instagram: <a href="https://www.instagram.com/devjuniorss" target="_blank">Instagram</a>
+        </p>
+    </footer>
+</body>
+</html>
