estrutura html completa

--- a/Html/index.html
+++ b/Html/index.html
@@ -59,11 +59,38 @@
         </section>
         <section id="skills">
             <h2>Skills</h2>
-            <article></article>
+            <article>
+                <ul>
+                    <li>Adaptabilidade</li>
+                    <li>Proatividade</li>
+                    <li>Pensamento Análitico</li>
+                    <li>Pensamento Critico</li>
+                    <li>Trabalho em Equipe</li>
+                    <li>Colaboração Ativa</li>
+                    <li>Comunicação Ética e Eficaz</li>
+                    <li>Mentalidade de Aprendizado Continuo</li>
+                    <li>Resolução de Problemas Orientada a Resultados</li>
+                    <li>Scrum</li>
+                    <li>XP</li>
+                    <li>Kanban</li>
+                    <li>Analise de Resquisitos</li>
+                    <li>UML</li>
+                </ul>
+            </article>
         </section>
         <section id="techs">
             <h2>Tecnologias</h2>
-            <article></article>
+            <article>
+                <section id="frontend"> Front End</section>
+                <section id="backend"> Back End</section>
+                <section id="mobile"> Mobile</section>
+                <section id="database"> Banco de Dados</section>
+                <section id="cloud"> Cloud</section>
+                <section id="ia"> IA</section>
+                <section id="process"> Software Engenire</section>
+                <section id="frameworks"> Frameworks & Libraries</section>
+                <section id="interest"> Interesses </section>
+            </article>
         </section>
         <section id="languages">
             <h2>Idiomas</h2>
@@ -78,71 +105,125 @@
             <article>
                 <h3>
                     <p>Alemão
-                    <li>Escrita</li>
-                    <li>Escuta</li>
-                    <li>Fala</li>
-                    <li>Leitura</li></p>
+                        <!-- Iniciante -->
+                        <li>Escrita</li>
+                        <li>Escuta</li>
+                        <li>Fala</li>
+                        <li>Leitura</li>
+                    </p>
                 </h3>
                 <h3>
                     <p>Espanhol
-                    <li>Escrita</li>
-                    <li>Escuta</li>
-                    <li>Fala</li>
-                    <li>Leitura</li></p>
+                        <!-- basico -->
+                        <li>Escrita</li>
+                        <li>Escuta</li>
+                        <li>Fala</li>
+                        <li>Leitura</li>
+                    </p>
                 </h3>
                 <h3>
                     <p>Francês
-                    <li>Escrita</li>
-                    <li>Escuta</li>
-                    <li>Fala</li>
-                    <li>Leitura</li></p>
+                        <!-- Iniciante -->
+                        <li>Escrita</li>
+                        <li>Escuta</li>
+                        <li>Fala</li>
+                        <li>Leitura</li>
+                    </p>
                 </h3>
                 <h3>
                     <p>Inglês
-                    <li>Escrita</li>
-                    <li>Escuta</li>
-                    <li>Fala</li>
-                    <li>Leitura</li></p>
+                        <!-- Avançado -->
+                        <li>Escrita</li>
+                        <li>Escuta</li>
+                        <li>Fala</li>
+                        <li>Leitura</li>
+                    </p>
+                </h3>
+                <h3>
+                    <p>Italiano
+                        <!-- basico -->
+                        <li>Escrita</li>
+                        <li>Escuta</li>
+                        <li>Fala</li>
+                        <li>Leitura</li>
+                    </p>
                 </h3>
                 <h3>
                     <p>Português
-                    <li>Escrita</li>
-                    <li>Escuta</li>
-                    <li>Fala</li>
-                    <li>Leitura</li></p>
+                        <!-- nativo -->
+                        <li>Escrita</li>
+                        <li>Escuta</li>
+                        <li>Fala</li>
+                        <li>Leitura</li>
+                    </p>
                 </h3>
             </article>
         </section>
         <section id="projects">
             <h2>Projetos</h2>
-            <article></article>
+            <article>
+                <ul>
+                    <li>Harmony Aesthetics Zentrum</li>
+                    <li>LiFitness</li>
+                    <li>FindMe</li>
+                    <li>Siqueira Construção</li>
+                    <li>Kerozene Store</li>
+                </ul>
+            </article>
         </section>
         <section id="exp">
             <h2>Experiencias Profissionais</h2>
-            <article></article>
+            <article>
+                <h3 id="cargo"> Técnico de Análise de Dados e Sistemas </h3>
+                <h4 id="empresa">Prefeitura Municipal de Senador Pompeu</h4>
+                <p>Durante pouco mais de 2 anos estive atuando sob o cargo de Analista no setor do cadastro únicos e
+                    dando suporte a mais 9 setores da prefeitura.<br>
+                    Tinha diversas funções e encargos a depender da necessidade, dentre os quais ajudei ativamente e
+                    idealizei algumas das seguintes melhorias:
+                <ul>
+                    <li>Desenvolvi sistemas internos para otimizar fluxos de atendimento, reduzindo a superlotação
+                        durante a pandemia em 50%.
+                    <li>Realizei análises de dados em 3 departamentos municipais, melhorando a precisão dos relatórios
+                        em 75% e apoiando 5 decisões políticas importantes.</li>
+                    <li>Atuei como contato técnico para 7 equipes de difentes setores, garantindo entregas no prazo e
+                        operação estável dos sistemas</li>
+                    <li>mplementei melhorias de segurança e desempenho em sistemas.</li>
+                </ul>
+                </p>
+            </article>
         </section>
         <section id="diplomas">
-            <h2>Diplomas e Titulos</h2>
+            <h2>Graduações</h2>
             <ul>
-                <li>
+                <li>Engenharia de Software
+                    <!-- 2019 to 2026 -->
                     <dl></dl>
                 </li>
-                <li>
+                <li> Análise e Desenvolvimento de Sistemas
+                    <!-- 2015-2018 -->
                     <dl></dl>
                 </li>
-                <li>
+            </ul>
+            <h3>Pos Graduação e Especialização</h3>
+            <ul>
+                <li> Telecomunicações com Ênfase em Redes e segurança
+                    <!-- jun 2023 | abri 2024 -->
                     <dl></dl>
                 </li>
-                <li>
+                <li> Computação Forense e Perícia Digital
+                    <!-- nov 2022 | mai 2023 -->
                     <dl></dl>
                 </li>
-                <li>
+                <li> Desenvolvimento de Aplicações mobile
+                    <!-- nov 2022 | mai 2023 -->
                     <dl></dl>
                 </li>
-                <li>
+                <li> MBA em Cybersecurity e cybercrimes
+                    <!-- nov 2022 | mai 2023  -->
                     <dl></dl>
                 </li>
-                <li>
+                <li> Desenvolvimento Web Full Stack
+                    <!-- jan 2022 | jul 2022 -->
                     <dl></dl>
                 </li>
             </ul>
@@ -151,11 +232,12 @@
         <section id="contato">
             <h2>Contato</h2>
             <article>
-                  <p>
-            Email: <a href="mailto:devjuniorss@gmail.com">devjuniorss@gmail.com</a> |
-            <a href="https://wa.me/5585984742878?text=acabei%20de%20ver%20seu%20perfil%20no%20seu%20site,%20gostaria%20de%20falar%20com%20voce%20se%20tiver%20um%20momento." target="_blank">WhatsApp</a>|
-           <a href="https://www.instagram.com/devjuniorss" target="_blank">Instagram</a>
-        </p>
+                <p>
+                    Email: <a href="mailto:devjuniorss@gmail.com">devjuniorss@gmail.com</a> |
+                    <a href="https://wa.me/5585984742878?text=acabei%20de%20ver%20seu%20perfil%20no%20seu%20site,%20gostaria%20de%20falar%20com%20voce%20se%20tiver%20um%20momento."
+                        target="_blank">WhatsApp</a>|
+                    <a href="https://www.instagram.com/devjuniorss" target="_blank">Instagram</a>
+                </p>
             </article>
         </section>
         <aside>
@@ -173,4 +255,5 @@
         </p>
     </footer>
 </body>
+
 </html>
