--- a/Html/index.html
+++ b/Html/index.html
@@ -4,60 +4,53 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name="author" content="DevJuniorss">
     <title>Junior SS</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Css/styles.css'>
-    <script src='../JavaScript/main.js'></script>
 </head>
 
 <body>
+
+    <!-- inserir futuramente quando expandir mais o portifolio
+     <header class="topo">
+        <h1 class="titulo-site">Dev Juniorss</h1>
+        implementar tema claro e escuro
+    </header> -->
+
     <nav class="nav-bar">
         <ul class="menu">
-            <li>
-                <a href="#inicio">E aí tudo bem?</a>
-            </li>
-            <li>
-                <a href="skills">Skills</a>
-            </li>
-            <li>
-                <a href="techs">Tecnologias</a>
-            </li>
-            <li>
-                <a href="languages">Idiomas</a>
-            </li>
-            <li>
-                <a href="projects">Projetos</a>
-            </li>
-            <li>
-                <a href="exp">Experiencias</a>
-            </li>
-            <li>
-                <a href="#diplomas">Diplomas</a>
-            </li>
-            <li>
-                <a href="#contato">Contato</a>
-            </li>
+            <li><a href="#inicio" class="menu-link">E aí tudo bem?</a></li>
+            <li><a href="#skills" class="menu-link">Skills</a></li>
+            <li><a href="#techs" class="menu-link">Tecnologias</a></li>
+            <li><a href="#languages" class="menu-link">Idiomas</a></li>
+            <li><a href="#projects" class="menu-link">Projetos</a></li>
+            <li><a href="#exp" class="menu-link">Experiencias</a></li>
+            <li><a href="#diplomas" class="menu-link">Diplomas</a></li>
+            <li><a href="#contato" class="menu-link">Contato</a></li>
         </ul>
     </nav>
+    
     <main>
-        <section id="inicio">
-            <h2>Inicio</h2>
-            <article>
-                <p> E aí, tudo bem?
-                    <br> Meu nome é Alexandre Júnior e sou desenvolvedor e estudante de engenharia de software
-                    <br> com foco em soluções web e mobile.
+        <section id="inicio" class="topo">
+            <!-- <h2>Inicio</h2> -->
+            <article class="perfil" data-tipo="img-perfil">
+                <img src="../images/photo.jpeg" alt="foto de perfil junior" class="foto-perfil">
+                <h1>Alexandre Júnior</h1>
+                <p class="topo-subtitulo"> E aí, vamos inovar?
+                    <br> Meu nome é Alexandre Júnior e sou desenvolvedor e estudante de engenharia de software.
+                    <br> Ofereço soluções web e mobile como serviços freelancer além de consultoria em alguns casos.
                     Tenho interesse em gerencia de projetos, cyber segurança e IA.
                 </p>
-                <p>
+                <p class="topo-subtitulo">
                     Chamei sua atenção? Olha minhas competências com mais calma aqui!
                     <!-- download cv -->
-                </p>
-                <p>
-                    <a href="#contato">Quer conversar mais sobre?</a>
+                <a href="#contato">Quer conversar mais sobre?</a>
+
                 </p>
             </article>
         </section>
-        <section id="skills">
+        <section id="skills" class="skills">
             <h2>Skills</h2>
             <article>
                 <ul>
@@ -78,7 +71,7 @@
                 </ul>
             </article>
         </section>
-        <section id="techs">
+        <section id="techs" class="techs">
             <h2>Tecnologias</h2>
             <article>
                 <section id="frontend"> Front End</section>
@@ -160,15 +153,54 @@
             </article>
         </section>
         <section id="projects">
-            <h2>Projetos</h2>
-            <article>
-                <ul>
-                    <li>Harmony Aesthetics Zentrum</li>
-                    <li>LiFitness</li>
-                    <li>FindMe</li>
-                    <li>Siqueira Construção</li>
-                    <li>Kerozene Store</li>
-                </ul>
+            <h2> Meus Projetos</h2>
+            <article class="projet-card" data-tipo="projeto-pessoal">
+                <h3>Harmony Aesthetics Zentrum</h3>
+                <img src="" alt="imagem do projeto da clinica de estetica" class="img-project">
+                <p>
+                    Projeto Web feito para atualizar web site de da Clínica de Estetica, clinica localizada em Luzern -
+                    Suiça, com varios serviços de beleza com agenda aberta esperando voce.
+                </p>
+                <!-- talvez n de pra ver pq é um projeto particular -->
+                <a href="https://github.com/DevJuniorss/HarmonyClinica" target="_blank" class="btn-projeto">Ver repositório</a>
+            </article>
+            <article class="projet-card" data-tipo="projeto-pessoal">
+                <h3>LiFitness</h3>
+                <img src="" alt="imagem do projeto LiFitness em busca da saúde e bem estar." class="img-project">
+                <p>
+                    Projeto Mobile para conectar você que quer sair do sedentarismo a profissionais capazes nas areas da
+                    nutrição e personal traineers.
+                    Com facil uso e interface amigavel, este projeto ajuda a pessoas a ingressarem na atividade física.
+                </p>
+                <a href="https://github.com/DevJuniorss/LiFitness" target="_blank" class="btn-projeto">Ver
+                    repositório</a>
+            </article>
+            <article class="projet-card" data-tipo="projeto-pessoal">
+                <h3>FindMe</h3>
+                <img src="" alt="imagem do projeto Findme" class="img-project">
+                <p>
+                    Projeto Mobile para agilizar e facilitar as marcações de consulta com a psipedagoga e os pais das
+                    crianças que buscam acompanhamento.
+                </p>
+                <a href="https://github.com/DevJuniorss/Findme" target="_blank" class="btn-projeto">Ver repositório</a>
+            </article>
+            <article class="projet-card" data-tipo="projeto-pessoal">
+                <h3>Siqueira Construção</h3>
+                <img src="" alt="imagem do projeto Siqueira Construção" class="img-project">
+                <p>
+                    Projeto Web para vendas de material de construção e controle de estoque da empresa.
+                </p>
+                <a href="https://github.com/DevJuniorss/DepositoSiqueira" target="_blank" class="btn-projeto">Ver
+                    repositório</a>
+            </article>
+            <article class="projet-card" data-tipo="projeto-pessoal">
+                <h3>Kerosene Store</h3>
+                <img src="" alt="imagem do projeto Kerosene Store." class="img-project">
+                <p>
+                    Projeto Web para venda de suplementos e acessorios de academia.
+                </p>
+                <a href="https://github.com/DevJuniorss/KerozeneStore" target="_blank" class="btn-projeto">Ver
+                    repositório</a>
             </article>
         </section>
         <section id="exp">
@@ -177,16 +209,11 @@
                 <h3 id="cargo"> Técnico de Análise de Dados e Sistemas </h3>
                 <h4 id="empresa">Prefeitura Municipal de Senador Pompeu</h4>
                 <p>Durante pouco mais de 2 anos estive atuando sob o cargo de Analista no setor do cadastro únicos e
-                    dando suporte a mais 9 setores da prefeitura.<br>
-                    Tinha diversas funções e encargos a depender da necessidade, dentre os quais ajudei ativamente e
-                    idealizei algumas das seguintes melhorias:
+                    dando suporte a mais 9 setores da prefeitura.<br> Tinha diversas funções e encargos a depender da necessidade, dentre os quais ajudei ativamente e idealizei algumas das seguintes melhorias:
                 <ul>
-                    <li>Desenvolvi sistemas internos para otimizar fluxos de atendimento, reduzindo a superlotação
-                        durante a pandemia em 50%.
-                    <li>Realizei análises de dados em 3 departamentos municipais, melhorando a precisão dos relatórios
-                        em 75% e apoiando 5 decisões políticas importantes.</li>
-                    <li>Atuei como contato técnico para 7 equipes de difentes setores, garantindo entregas no prazo e
-                        operação estável dos sistemas</li>
+                    <li>Desenvolvi sistemas internos para otimizar fluxos de atendimento, reduzindo a superlotação durante a pandemia em 50%.</li>
+                    <li>Realizei análises de dados em 3 departamentos municipais, melhorando a precisão dos relatórios em 75% e apoiando 5 decisões políticas importantes.</li>
+                    <li>Atuei como contato técnico para 7 equipes de difentes setores, garantindo entregas no prazo e operação estável dos sistemas</li>
                     <li>mplementei melhorias de segurança e desempenho em sistemas.</li>
                 </ul>
                 </p>
@@ -247,13 +274,15 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por <span class="assinatura">Alexandre Júnior</span></p>
-        <p>
+        <p>&copy; Todos os direitos reservados</p>
+        <p><div class="social">
             Linkedin: <a href="https://www.linkedin.com/in/devjuniorss" target="_blank">LinkedIn</a> |
             GitHub: <a href="https://github.com/DevJuniorss" target="_blank">DevJuniorss</a> |
             Instagram: <a href="https://www.instagram.com/devjuniorss" target="_blank">Instagram</a>
+            </div>
         </p>
     </footer>
-</body>
 
+    <!-- <script src='../JavaScript/main.js'></script> -->
+</body>
 </html>
